# promptcompactor

./: .gitignore  .mcp.json  CLAUDE.md  HANDOFF_PROMPT.md  LICENSE  Makefile  PROJECT_EXPLAINED.md  README.md  blog-post.html  config.json  pyproject.toml  requirements.txt
.claude/: instructions.md  plan.md  progress.md  settings.json
.claude/hooks/: on-edit.sh  on-precompact.sh  on-prompt.sh  on-session-start.sh  on-stop.sh
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  PROMPTS.md  SETUP.md
prompts/: classify.txt  code_outline.txt  compress.txt  extract.txt  file_summary.txt  summarize.txt  verify.txt
scripts/: com.apfel-context.server.plist  com.promptcompactor.daemon.plist  com.promptcompactor.server.plist  hook_runner.py  install.sh  start.sh  uninstall.sh
src/: __init__.py  apfel_client.py  chunker.py  code_extractor.py  compactor_client.py  config.py  extractor.py  health.py  server.py  state_manager.py
tests/: test_apfel_client.py  test_chunker.py  test_code_extractor.py  test_compactor_client.py  test_config.py  test_health.py  test_hook_runner.py  test_integration.py  test_server.py  test_state_manager.py
tools/: bench.py
